--- a/templates/App_HTML_template.html
+++ b/templates/App_HTML_template.html
@@ -6,7 +6,7 @@
     <head>        
         
         <br><br>
-        <img src="C:\Users\Pragnesh.Prajapati\Downloads\Fake_news_Updated\Fake_news\templates\logo.jpg", px", height="200px">
+        <img src="{{url_for('static',filename = 'logo1.png')}}", px", height="200px">
         
     </head>
 
